--- a/components/common/QuizCards/QuizCards.module.scss
+++ b/components/common/QuizCards/QuizCards.module.scss
@@ -158,6 +158,12 @@
 }
 
 // /* AI */
+
+// .aiSection {
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+// }
 // .aiSection {
 //   width: 100%;
 //   height: 15%;
@@ -165,16 +171,19 @@
 //   bottom: 30rem;
 // }
 
-// .aiChat {
-//   width: 184px;
-//   height: 184px;
-//   background-image: url("/images/aiChat.gif");
-//   background-size: 100%;
-//   position: absolute;
-//   margin-top: 20rem;
-//   right: 0;
-//   mix-blend-mode: multiply;
-// }
+.aiChat {
+  position: absolute;
+  bottom: 0rem;
+  z-index: 1000;
+  width: 200rem;
+  height: 200rem;
+  background-image: url("/images/aiChat.gif");
+  background-size: 100%;
+  position: absolute;
+  margin-top: 20rem;
+  right: 0;
+  mix-blend-mode: multiply;
+}
 
 // .speechBubble {
 //   position: absolute;
