--- a/components/common/OnWay/OnWay.module.scss
+++ b/components/common/OnWay/OnWay.module.scss
@@ -280,3 +280,12 @@
   width: 100%;
   z-index: 0;
 }
+
+.slider {
+  width: 250rem;
+  z-index: 999;
+  right: 50rem;
+  top: 150rem;
+  position: absolute;
+}
+
