--- a/components/common/OnWay/OnWay.module.scss
+++ b/components/common/OnWay/OnWay.module.scss
@@ -9,11 +9,13 @@
 }
 
 .rootWrapper {
+  position: relative;
   margin-top: 44rem;
   display: flex;
   max-width: 1200rem;
   width: 100%;
   flex-direction: column;
+  // align-items: center;
 }
 .backBtn {
   color: white;
@@ -36,7 +38,6 @@
 }
 
 .notification {
-
   height: 100rem;
   color: white;
   font-weight: 600;
@@ -44,11 +45,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 9999;
   transition: width 0.5s ease-in-out;
   justify-content: space-between;
   margin-top: 90rem;
-  margin-right: 23rem;
 }
 
 .notificationText {
@@ -63,11 +62,21 @@
   transition: width 0.5s ease-in-out;
 }
 
-.data {
+.dataRoot {
+  position: absolute;
+  bottom: 120rem;
+  width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   z-index: 2;
+}
+
+.dataWrapper {
+  width: 90%;
+  justify-content: space-between;
+  display: flex;
 }
 
 .dataTitle {
@@ -97,6 +106,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 70rem;
 }
 
 .dist {
@@ -111,17 +121,20 @@
 }
 
 .speedometer {
+  position: absolute;
+  left: 49%;
+  top: 70%;
+  width: auto;
+  transform: translate(-49%, -70%);
+  width: fit-content;
   z-index: 2;
-  width: 50%;
-  position: fixed;
-  left: 621rem;
-  top: 344rem;
+  padding-bottom: 350rem;
 }
 
 .sunRays {
   position: relative;
-  width: 17%;
-  height: 60%;
+  width: 100%;
+  height: 100%;
 }
 
 .ray {
@@ -135,10 +148,13 @@
 }
 
 .route {
+  position: absolute;
+  width: 100%;
+  bottom: 70rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 160rem;
+  // margin-top: 160rem;
 }
 
 .textStart {
@@ -163,18 +179,36 @@
   background-color: rgba(180, 47, 47, 1);
 }
 
-.progressContainer {
+.progressRoot {
   position: absolute;
-  width: 1000rem;
-  left: 190rem;
-  bottom: 46rem;
-  height: 50rem;
+  left: 50%;
+  transform: translate(-50%);
+  bottom: 100rem;
+}
+
+.progressWrapper {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.iconContainer {
+  position: relative;
+
+}
+
+.item {
+  position: absolute;
+  offset-path: path("M0 14H62L82 26L120 1L160 26L198 1L237 26L276.5 1L314.5 26L353 1L393 26L430 1L470 26L508 1L546 26L586 1L624 26L662 1L702 26L740 1L779 26L798 14H852");
+  transition: all 1.5s;
+  offset-distance: var(--progress);
+  top: -15rem;
+  
 }
 
 .baseimage {
   position: absolute;
-  top: 0;
-  left: 0;
   height: 48px;
   z-index: 1;
 }
@@ -190,23 +224,7 @@
   transition: width 0.25s ease-in-out;
 }
 
-.iconContainer {
-  position: absolute;
-  width: 95%;
-  left: 2.5%;
-  right: 2.5%;
-  display: flex;
-}
 
-.icon {
-  position: absolute;
-  margin-top: var(--y-position);
-  width: 60rem;
-  height: 60rem;
-  z-index: 3;
-  transform: translateX(-50%);
-  transition: all 0.25s ease-out;
-}
 
 
 //Fact-Icons
@@ -277,6 +295,7 @@
   bottom: 0;
   top: 0;
   left: 0;
+  pointer-events: none;
   width: 100%;
   z-index: 0;
 }
