--- a/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
+++ b/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
@@ -52,7 +52,7 @@
   background-image: url("/images/img.png");
   background-color: white;
   color: var(--light-blue);
-  background-size: contain;
+  background-size: cover;
 }
 
 .rightDone {
