--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ body,
   margin: 0;
   font-size: 16rem;
   color: var(--color-black);
-  overflow: hidden;
+  position: relative;
 }
 
 body {
@@ -57,6 +57,30 @@ a {
   --page-background: #fff;
   --title-font: "Amatic SC", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+.swiper {
+  width: 100vw;
+  height: 100vh;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  width: 100%;
+  height: 100%;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 
 .stats {
