--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -9,6 +9,19 @@
   background-color: black;
 }
 
+.preloader{
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-color: black;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 50rem;
+}
+
 .canvasTrain {
   width: 100vw;
   height: 100vh;
