--- a/components/common/IvolgaRules/IvolgaRules.module.scss
+++ b/components/common/IvolgaRules/IvolgaRules.module.scss
@@ -167,6 +167,7 @@
   font-family: sans-serif;
   font-size: 18rem;
   font-weight: 500;
+  line-height: 22rem;
   width: 420rem;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
