--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -82,11 +82,11 @@
   div {
     width: 20rem;
     height: 80%;
-    background-color: red;
+    background-color: blue;
   }
 
   .current {
-    background-color: rgb(12, 216, 97);
+    background-color: white;
   }
 }
 
