added pop-up css

--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -4,12 +4,13 @@
   background-color: white;
   width: 100vw;
   height: 100vh;
-  font-family: 'Regular', sans-serif;
+  font-family: "Regular", sans-serif;
   color: white;
   background-color: black;
+  
 }
 
-.preloader{
+.preloader {
   height: 100vh;
   width: 100vw;
   position: fixed;
@@ -26,17 +27,18 @@
   width: 100vw;
   height: 100vh;
   background-color: black;
-  -ms-user-select: none; 
-		-moz-user-select: none; 
-		-webkit-user-select: none; 
-		user-select: none; 
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  overflow: hidden;
 
-    .count {
-      position: absolute;
-      z-index: 1;
-      color: gray;
-      font-size: 50rem;
-    }
+  .count {
+    position: absolute;
+    z-index: 1;
+    color: gray;
+    font-size: 50rem;
+  }
 }
 
 .buttonBack {
@@ -78,6 +80,7 @@
   width: 440rem;
   height: 152rem;
   background-color: var(--light-blue);
+  overflow: hidden;
 
   div {
     width: 20rem;
@@ -93,20 +96,47 @@
 .detailInfoRoot {
   position: absolute;
   display: flex;
-  justify-content: center;
-  gap: 35rem;
+  justify-content: space-around;
   padding: 10rem;
-  align-items: center;
   flex-direction: column;
   z-index: 1;
   // transform: translateX(calc(100% + 64rem));
   top: 240rem;
   right: -100%;
   width: 440rem;
-  height: 152rem;
-  background-color: var(--light-blue);
+  height: 160rem;
+  background-color: white;
+  color: rgba(180, 47, 47, 1);
+  border-radius: 10rem;
+  border: 4rem solid rgba(180, 47, 47, 1);
 }
 
+.correct {
+  border: 4rem solid var(--light-blue);
+  color: var(--light-blue);
+}
+
+.detailsName {
+  color: black;
+  font-size: 24rem;
+  font-weight: 600;
+}
+
+.detailstext {
+  width: 65%;
+  z-index: 2;
+}
+
+.detailsImg {
+  position: inherit;
+  right: 0;
+}
+
+.detailZig {
+  position: inherit;
+  right: 0;
+  bottom: 20rem;
+}
 
 .starterMessageRoot {
   position: absolute;
@@ -124,6 +154,4 @@
   color: white;
   z-index: 10;
   background-color: var(--light-blue);
-
 }
-
