--- a/components/common/Timer/Timer.module.scss
+++ b/components/common/Timer/Timer.module.scss
@@ -15,13 +15,13 @@
     stroke: none;
   }
 
-  .path-elapsed {
-    stroke-width: 5rem;
-    stroke: var(--light-blue);
+  .path_elapsed {
+    stroke-width: 2.5rem;
+    width: 1rem;
   }
 
-  .path-remaining {
-    stroke-width: 5rem;
+  .path_remaining {
+    stroke-width: 2.5rem;
     stroke-linecap: round;
     transform: rotate(90deg);
     transform-origin: center;
@@ -30,25 +30,30 @@
     stroke: currentColor;
   }
 
+  .timer_label {
+    position: absolute;
+    color: black;
+    width: 206rem;
+    height: 206rem;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 32rem;
+    font-weight: 500;
+    line-height: 36rem;
+  }
+  
   .time {
     font-size: 20rem;
     line-height: 22rem;
     font-weight: 500;
   }
 
-.timer__label {
-  position: absolute;
-  color: var(--light-blue);
-  width: 206rem;
-  height: 206rem;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 32rem;
-  line-height: 36rem;
-    }
+  .white_text {
+    color: white !important;
   }
-
   
+}
+
