--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -10,6 +10,20 @@
   
 }
 
+.lottieAnimation {
+  position: absolute;
+  z-index: 1;
+  
+  div{
+    
+  }
+}
+
+.test{
+  font-size: 50rem;
+  scale: 5;
+}
+
 .preloader {
   height: 100vh;
   width: 100vw;
