--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -11,11 +11,12 @@
 
 .fade_in {
   opacity: 0;
-  transition: opacity 3s;
+  transition: opacity 2s ease-in-out;
 }
 
 .fade_in_show {
   opacity: 1;
+  transition: opacity 2s ease-out;
 }
 
 
