--- a/components/common/OnWay/OnWay.module.scss
+++ b/components/common/OnWay/OnWay.module.scss
@@ -12,7 +12,7 @@
   position: relative;
   margin-top: 44rem;
   display: flex;
-  max-width: 1200rem;
+  max-width: 1260rem;
   width: 100%;
   flex-direction: column;
   // align-items: center;
@@ -67,7 +67,7 @@
 
 .dataRoot {
   position: absolute;
-  bottom: 120rem;
+  bottom: 160rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -201,7 +201,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  bottom: -15rem;
+  bottom: -12rem;
 
   .circle{
     width: 10rem;
@@ -211,9 +211,27 @@
   }
 
   .stick {
-    height: 50rem;
-    width: 5rem;
+    height: 60rem;
+    opacity: 0.7;
+    width: 2rem;
     background-color: white;
+  }
+
+  .textWrapper {
+    position: relative;
+    display: flex;
+  }
+
+  .text {
+    background-color: white;
+    color: black;
+    text-align: center;
+    width: 416rem;
+    height: 142rem;
+    bottom: -5rem;
+    position: absolute;
+    left: -50%;
+    transform: translate(-50%);
   }
 }
 
@@ -226,6 +244,7 @@
 
 .iconContainer {
   position: relative;
+  z-index: 1;
 
 }
 
@@ -237,7 +256,8 @@
   top: -15rem;
 }
 
-.baseimage {
+.baseImage {
+  // background-image: url("/images/onway/on_way_progress.png");
   position: absolute;
   height: 48px;
   z-index: 1;
@@ -316,20 +336,6 @@
   transition: color 0.5s ease-in-out;
 }
 
-//background img
-// .backgroundImg {
-//   background-image: url('/images/onway/original.jpg');
-//   background-size: cover;
-//   opacity: 0.2;
-//   position: absolute;
-//   bottom: 0;
-//   top: 0;
-//   left: 0;
-//   pointer-events: none;
-//   width: 100%;
-//   z-index: 0;
-// }
-
 .backgroundImg{
   width: 100%;
   height: 100%;
@@ -340,6 +346,7 @@
 
   img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
   }
   
