--- a/components/common/IvolgaRules/IvolgaRules.module.scss
+++ b/components/common/IvolgaRules/IvolgaRules.module.scss
@@ -190,5 +190,5 @@
   border-left: 38px solid transparent;
   right: 590px;
   top: 60%;
-  transform: translateY(-70%) scaleX(1);
+  transform: translateY(-70%) translateX(53rem) scaleX(1);
 }
