--- a/components/common/FakeAi/FakeAi.module.scss
+++ b/components/common/FakeAi/FakeAi.module.scss
@@ -31,8 +31,7 @@
   .container {
     display: flex;
     justify-content: flex-end;
-    width: auto;
-    max-width: 658rem;
+    align-items: center;
   }
 }
 
@@ -40,13 +39,7 @@
   font-size: 18rem;
   font-weight: 500;
   line-height: 22rem;
-
-  display: inline-block;
-  white-space: pre-wrap;
-
-  min-width: 420rem; 
-  max-width: 80%; 
-  height: auto;
+  width: 60%;
 
   background: rgb(255, 255, 255);
   border-radius: 10px;
@@ -55,20 +48,30 @@
   color: var(--light-blue);
 
   z-index: 2;
-  transform: translateX(-125rem);
+
 }
 
-.speechBubble:before {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
+.triangle {
+  width: 10rem;
+  height: 10rem;
   border-top: 16px solid transparent;
   border-bottom: 15px solid transparent;
   border-right: 21px solid rgb(255, 255, 255);
   border-left: 38px solid transparent;
-  right: 590px;
-  top: 60%;
-  transform: translateY(-70%) translateX(515rem) scaleX(-1);
+  transform: scale(-1);
+}
+
+.speechBubble:before {
+  // content: "";
+  // width: 0px;
+  // height: 0px;
+  // position: absolute;
+  // border-top: 16px solid transparent;
+  // border-bottom: 15px solid transparent;
+  // border-right: 21px solid rgb(255, 255, 255);
+  // border-left: 38px solid transparent;
+  // right: 590px;
+  // top: 60%;
+  // transform: translateY(-70%) translateX(515rem) scaleX(-1);
 }
 
