--- a/components/common/CanvasPreloader/CanvasPreloader.module.scss
+++ b/components/common/CanvasPreloader/CanvasPreloader.module.scss
@@ -1,12 +1,77 @@
-.preloader {
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    background-color: black;
-    z-index: 100;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 50rem;
-  }
+@import "styles/mixins";
+
+.root {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(
+    110deg,
+    rgba(0, 70, 154, 1),
+    rgba(183, 214, 251, 1)
+  );
+}
+
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.textblock {
+  z-index: 2;
+  width: 60%;
+  height: 360rem;
+  color: rgb(0, 0, 0);
+  background-color: white;
+  border-radius: 10rem;
+  display: flex;
+  flex-direction: column;
+  margin-top: 60rem;
+  align-items: center;
+  justify-content: center;
+}
+.title {
+  font-size: 50rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.text {
+  font-size: 26rem;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 30rem;
+}
+
+.progressContainer {
+  margin-top: 40rem;
+  position: relative;
+}
+
+.baseimage {
+  z-index: 1;
+}
+
+.overlayimage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-repeat: no-repeat;
+
+  width: var(--progress-width);
+  max-width: 700rem;
+  height: 520rem;
+  z-index: 2;
+  background-image: url("/images/progress/Union2.svg");
+  transition: width 0.1s ease-in-out;
+}
+
+.clouds {
+  bottom: 0%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url("/images/background/clouds.png");
+  background-size: cover;
+}
