--- a/components/common/CanvasPreloader/CanvasPreloader.module.scss
+++ b/components/common/CanvasPreloader/CanvasPreloader.module.scss
@@ -1,13 +1,18 @@
-@import "styles/mixins";
-
-.root {
-  width: 100%;
+.preloader {
   height: 100vh;
+  width: 100vw;
+  position: fixed;
   background: linear-gradient(
     110deg,
     rgba(0, 70, 154, 1),
     rgba(183, 214, 251, 1)
   );
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 50rem;
 }
 
 .wrapper {
@@ -19,7 +24,7 @@
 }
 
 .textblock {
-  z-index: 2;
+  z-index: 102;
   width: 60%;
   height: 360rem;
   color: rgb(0, 0, 0);
@@ -50,24 +55,24 @@
 }
 
 .baseimage {
-  z-index: 1;
+  z-index: 101;
 }
 
 .overlayimage {
   position: absolute;
-  top: 0;
+  top: 15rem;
   left: 0;
   background-repeat: no-repeat;
-
   width: var(--progress-width);
   max-width: 700rem;
-  height: 520rem;
-  z-index: 2;
-  background-image: url("/images/progress/Union2.svg");
+  height: 32rem;
+  z-index: 102;
+  background-image: url('/images/progress/Union2.svg');
   transition: width 0.1s ease-in-out;
 }
 
 .clouds {
+  z-index: 101;
   bottom: 0%;
   width: 100%;
   height: 100%;
