--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -157,6 +157,11 @@
     animation: fadeInFromNone 2s ease-out;
   }
 
+  .timeFail {
+    background-color: red !important;
+    animation: fadeInFromNone 2s ease-out;
+  }
+
   .finalImgWrapper {
     width: 100%;
     height: 100%;
