--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -51,10 +51,10 @@
   width: 100vw;
   height: 100vh;
   background-color: black;
-  // -ms-user-select: none;
-  // -moz-user-select: none;
-  // -webkit-user-select: none;
-  // user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
   overflow: hidden;
 
   .count {
