--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,7 @@ textarea {
 
 html,
 body {
+  background-color: black;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
