--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,7 +37,11 @@ textarea {
 
 html,
 body {
-  background-color: black;
+  background: linear-gradient(
+    110deg,
+    rgba(0, 70, 154, 1),
+    rgba(183, 214, 251, 1)
+  );
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
