--- a/components/common/ProgressBar/ProgressBar.module.scss
+++ b/components/common/ProgressBar/ProgressBar.module.scss
@@ -33,7 +33,7 @@
   justify-content: center;
 }
 
-.imgWrapper{
+.imgWrapper {
   position: absolute;
 }
 
@@ -43,7 +43,8 @@
   top: -260rem;
   left: 235rem;
   opacity: 0.7;
-  filter: saturate(40%) brightness(120%) contrast(100%) sepia(33%) hue-rotate(-20deg);
+  filter: saturate(40%) brightness(120%) contrast(100%) sepia(33%)
+    hue-rotate(-20deg);
   transform: scale(0.9);
 }
 
@@ -96,39 +97,32 @@
 }
 
 .progressContainer {
-  margin-top:30rem;
+  margin-top: 60rem;
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .baseimage {
-  // position: absolute;
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%,-50%);
-  z-index: 1;
+  width: 75%;
+  position: absolute;
+}
+
+.overlayimage {
+  width: 75%;
+  position: absolute;
+  clip-path: polygon(
+    0 0,
+    var(--progress-width) 0,
+    var(--progress-width) 100%,
+    0% 100%
+  );
 }
 
 .imgWrapper {
   width: 100%;
   height: 100vh;
 }
-
-.progressContainer {
-  position: relative;
-}
-
-.overlayimage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-
-  width: var(--progress-width);
-  max-width: 538px;
-  height: 32px;
-  z-index: 2;
-  background-image: url('/images/progress/Union2.svg');
-  background-repeat: no-repeat;
-  transition: width 0.3s ease-in-out;
-}
-
 
