--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -9,6 +9,10 @@
   background-color: black;
 }
 
+.disableTouch {
+  pointer-events: none !important;
+}
+
 .lottieAnimation {
   position: absolute;
   z-index: 1;
