--- a/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
+++ b/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
@@ -62,6 +62,10 @@
 .questionRoot {
   padding: 64rem;
   position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .category {
@@ -77,6 +81,7 @@
 
 .questionText {
   margin-top: 20rem;
+  font-size: 46rem;
   line-height: 50rem;
   width: 972rem;
   color: black;
@@ -85,16 +90,17 @@
 
 .bigText {
   font-size: 30rem;
-  line-height: 30rem;
+  line-height: 34rem;
 }
 
 .answersWrapper {
-  margin-top: 108rem;
+  // margin-top: 108rem;
   gap: 32rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 100rem;
 }
 
 .answerButton {
@@ -112,7 +118,8 @@
 }
 
 .bigBtnText {
-  font-size: 20rem;
+  font-size: 26rem;
+  line-height: 30rem;
 }
 
 .completeRoot {
