--- a/components/common/QuizFirstPage/QuizFirstPage.module.scss
+++ b/components/common/QuizFirstPage/QuizFirstPage.module.scss
@@ -2,6 +2,8 @@
 .root {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
   background: linear-gradient(99.13deg, #00469a 5.73%, #b7d6fb 96.89%);
   font-family: "ALS Hauss", sans-serif;
   overflow: hidden;
@@ -28,11 +30,11 @@
   z-index: 2;
   color: white;
   width: 1200rem;
-  height: 500rem;
+  height: 415rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: space-between;
   box-sizing: border-box;
   flex-wrap: wrap;
   gap: 20rem;
