--- a/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
+++ b/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
@@ -65,7 +65,7 @@
 .right {
   width: 66%;
   height: 100%;
-  background-image: url("/images/img.png");
+  // background-image: url("/images/img.png");
   background-color: white;
   color: var(--light-blue);
   background-size: cover;
