--- a/components/common/QuizFirstPage/QuizFirstPage.module.scss
+++ b/components/common/QuizFirstPage/QuizFirstPage.module.scss
@@ -75,20 +75,16 @@
 
 .imgContainer {
   position: absolute;
-  width: 100%;
-  height: 180px;
-  left: 0;
   bottom: 25rem;
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  align-items: flex-end;
-  flex-direction: column;
 }
 
 .img0 {
   position: absolute;
   bottom: 40rem;
-  left: 5%;
   z-index: 1;
   overflow: hidden;
   width: 1437rem;
