smooth background transition

--- a/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
+++ b/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
@@ -69,6 +69,7 @@
   background-color: white;
   color: var(--light-blue);
   background-size: cover;
+  transition: all 0.5s ease-in-out;
 }
 
 .rightDone {
