--- a/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
+++ b/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
@@ -236,6 +236,15 @@
   }
 }
 
+.blueButton{
+  color: white;
+  background-color: var(--light-blue);
+  &:hover {
+    color: var(--light-blue);
+    background-color: white;
+  }
+}
+
 .completeStatistick {
   display: flex;
   flex-direction: column;
