--- a/components/common/OnWay/OnWay.module.scss
+++ b/components/common/OnWay/OnWay.module.scss
@@ -73,7 +73,6 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  z-index: 2;
 }
 
 .dataWrapper {
@@ -218,8 +217,18 @@
   }
 
   .textWrapper {
-    position: relative;
+    width: 416rem;
+    height: 142rem;
+    z-index: 10;
+    position: absolute;
     display: flex;
+    bottom: 60rem;
+    
+    img {
+      object-fit: cover;
+    border-radius: 10rem;
+      width: 100%;
+    }
   }
 
   .text {
@@ -273,8 +282,6 @@
   background-size: none;
   transition: width 0.25s ease-in-out;
 }
-
-
 
 
 //Fact-Icons
@@ -340,7 +347,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: 1;
+  z-index: 0;
   opacity: 0.2;
   pointer-events: none;
 
