--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -135,10 +135,12 @@
   padding: 5rem;
 }
 
+
+
 .detailsRoot {
   position: absolute;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 10rem;
   align-items: center;
   flex-direction: row;
@@ -151,10 +153,21 @@
   background-color: var(--semi-blue);
   overflow: hidden;
 
-  .imgsWrapper {
-    width: 20rem;
-    height: 80%;
-    background-color: blue;
+  .base {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.5;
+    // filter: invert(1);
+    margin-bottom: 5px;
+    // margin-bottom: 5px;
+
+  }
+
+
+
+  img {
+    // width: 100%;
+    // height: 100%;
   }
 
   .current {
@@ -180,6 +193,11 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+  }
+
+  .opacityAnim {
+    animation: fadeInFromNone 3s ease-out;
+
   }
 }
 
