question css fixed

--- a/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
+++ b/components/pages/QuizNew/TouchPanel/TouchPanel.module.scss
@@ -116,10 +116,19 @@
 }
 
 .bigText {
-  font-size: 30rem;
+  font-size: 32rem;
   line-height: 34rem;
 }
 
+.mediumText {
+  font-size: 40rem;
+  line-height: 44rem;
+}
+
+.mediumText {
+  font-size: 40rem;
+  line-height: 44rem;
+}
 .answersWrapper {
   // margin-top: 108rem;
   gap: 32rem;
