--- a/components/common/FakeAi/FakeAi.module.scss
+++ b/components/common/FakeAi/FakeAi.module.scss
@@ -40,7 +40,8 @@
   font-weight: 500;
   line-height: 22rem;
   width: 60%;
-
+  min-width: 220rem;
+  
   background: rgb(255, 255, 255);
   border-radius: 10px;
   padding: 24rem;
