--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -143,6 +143,7 @@
   font-size: 15rem;
   pointer-events: none;
   padding: 5rem;
+  transform: translateX(25rem) translateY(-7rem);
 }
 
 .detailsRoot {
