--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -18,6 +18,15 @@
   z-index: 1;
 }
 
+.popUpsWrapper {
+  position: absolute;
+  z-index: 10;
+  width: 100vw;
+  height: 100vh;
+  transition: opacity 0.4s ease-in-out;
+  pointer-events: all;
+}
+
 .finger{
   width: 200rem;
   z-index: 1;
@@ -205,6 +214,10 @@
 
   .opacityAnim {
     animation: fadeInFromNone 3s ease-out;
+  }
+
+  .opacityAnimInInfinite {
+    animation: fadeInFromNone2 3s infinite;
 
   }
 }
@@ -235,16 +248,63 @@
   }
 }
 
+@keyframes fadeInFromNone2 {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.detailHelperRoot {
+  position: absolute;
+  color: white;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+}
+
+.detailHelperWrapper{
+  width: 500rem;
+  padding: 25rem;
+  text-align: center;
+  border-radius: 10rem;
+  height: 100rem;
+  background-color: gray;
+  border: solid 3rem white;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20rem;
+  top: 50%;
+  left: 50%;
+  background-color: var(--light-blue);
+  transform: translate(-50%,-50%);
+}
+
 .detailInfoRoot {
   position: absolute;
   display: flex;
   justify-content: space-around;
   padding: 10rem;
   flex-direction: column;
+  pointer-events: none;
   z-index: 1;
-
-  top: 240rem;
-  right: -100%;
+  opacity: 0;
+  // top: 240rem;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  // right: -100%;
   width: 440rem;
   height: 160rem;
   background-color: white;
@@ -282,9 +342,31 @@
 
 .starterMessageRoot {
   position: absolute;
-  top: 136rem;
-  left: 64rem;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  // top: 0rem;
+  // top: 136rem;
+  // left: 64rem;
+  color: white;
+  z-index: 10;
+}
+
+.starterBackground {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background: white;
+  opacity: 0.8;
+  z-index: 10;
+}
+
+.starterWrapper {
+  position: absolute;
   display: flex;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
   flex-direction: column;
   justify-content: space-between;
   font-size: 18rem;
@@ -292,10 +374,8 @@
   padding: 24rem;
   padding-left: 56rem;
   border-radius: 10rem;
-  width: 362rem;
+  width: 392rem;
   height: 190rem;
-  color: white;
-  z-index: 10;
   background-color: var(--light-blue);
   gap: 18rem;
 }
@@ -306,8 +386,8 @@
   width: 3rem;
   height: 110rem;
   background-color: white;
-  margin: 0 auto;
-  transform: translateX(-167rem) translateY(-161rem);
+  // margin: 0 auto;
+  transform: translateX(-25rem) translateY(-161rem);
   padding-bottom: 122rem;
 }
 
