--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -75,7 +75,7 @@
 
 .canvasTrain {
   width: 100vw;
-  height: 100vh;
+  height: get-real-vh(100);
   background-color: black;
   -ms-user-select: none;
   -moz-user-select: none;
@@ -163,8 +163,9 @@
   align-items: center;
   flex-direction: row;
   z-index: 1;
-  top: 64rem;
-  right: 64rem;
+  left: 50%;
+  bottom: 50rem;
+  transform: translate(-50%);
   width: 440rem;
   height: 152rem;
   border-radius: 10rem;
