--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -368,18 +368,35 @@
   display: flex;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   flex-direction: column;
-  justify-content: space-between;
   font-size: 18rem;
   line-height: 22rem;
   padding: 24rem;
-  padding-left: 56rem;
   border-radius: 10rem;
-  width: 392rem;
-  height: 190rem;
+  width: 640rem;
+  height: 560rem;
   background-color: var(--light-blue);
-  gap: 18rem;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+}
+.starterHeadline{
+  font-size: 54rem;
+  font-weight: 500;
+}
+
+.starterContent{
+  display: flex;
+  width: 300rem;
+  height: 175rem;
+}
+
+.textContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 24rem;
 }
 
 .lineWithcircles {
@@ -388,9 +405,7 @@
   width: 3rem;
   height: 110rem;
   background-color: white;
-  // margin: 0 auto;
-  transform: translateX(-25rem) translateY(-161rem);
-  padding-bottom: 122rem;
+  padding-bottom: 151rem;
 }
 
 .circle {
@@ -410,7 +425,7 @@
 .middle {
   bottom: 0;
   left: 50%;
-  transform: translateX(-50%) translateY(-45rem);
+  transform: translateX(-50%) translateY(-57rem);
 }
 
 .bottom {
@@ -419,6 +434,22 @@
   transform: translateX(-50%);
 }
 
+.starterBtn {
+  background-color: white;
+  color: var(--light-blue);
+  width: 288rem;
+  height: 62rem;
+  border-radius: 100px;
+  border: none;
+  font-weight: 700;
+  font-size: 20rem;
+  z-index: 1;
+
+  &:hover {
+    color: white;
+    background-color: var(--light-blue);
+  }
+}
 .failMessageRoot {
   position: absolute;
   top: 0;
