--- a/components/common/QuizCards/QuizCards.module.scss
+++ b/components/common/QuizCards/QuizCards.module.scss
@@ -83,7 +83,8 @@
 }
 
 .card {
-  width: 305rem;
+  // width: 305rem;
+  width: 394rem;
   height: 520rem;
   border-radius: 1em;
   background-color: rgb(240, 245, 249);
@@ -129,7 +130,8 @@
   font-weight: 500;
 }
 .cardTitle {
-  margin-top: 8rem;
+  // margin-top: 8rem;
+  margin-top: 24rem;
   color: black;
   font-size: 40rem;
   font-weight: 500;
@@ -141,10 +143,11 @@
   top: 174rem;
   color: var(--light-blue);
   font-weight: 500;
-  margin-top: 24rem;
-  max-width: 240rem;
+  // margin-top: 24rem;
+  // max-width: 240rem;
   font-size: 16rem;
-  line-height: 16rem;
+  // line-height: 16rem;
+  line-height: 20rem;
   letter-spacing: 0em;
   z-index: 2;
 }
@@ -153,7 +156,7 @@
   z-index: 1;
   position: absolute;
   bottom: -170rem;
-  left: -40rem;
+  // left: -40rem;
   width: 500rem;
 }
 
