Fixed ivolga logic

--- a/components/pages/Home/Home.module.scss
+++ b/components/pages/Home/Home.module.scss
@@ -25,7 +25,7 @@
 
 .popUpsWrapper {
   position: absolute;
-  z-index: 10;
+  z-index: 3;
   width: 100vw;
   height: 100vh;
   transition: opacity 0.4s ease-in-out;
@@ -298,26 +298,40 @@
   transform: translate(-50%,-50%);
 }
 
+
 .detailInfoRoot {
   position: absolute;
   display: flex;
   justify-content: space-around;
   padding: 10rem;
   flex-direction: column;
-  pointer-events: none;
-  z-index: 1;
-  opacity: 0;
+  pointer-events: all;
+  z-index: 3;
   // top: 240rem;
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
   // right: -100%;
-  width: 440rem;
-  height: 160rem;
+  width: 555rem;
+  height: 210rem;
   background-color: white;
   color: rgba(180, 47, 47, 1);
   border-radius: 10rem;
   border: 4rem solid rgba(180, 47, 47, 1);
+}
+
+.detailConfirmButton{
+  position: absolute;
+  bottom: -65rem;
+  border-radius: 10rem;
+  color: white;
+  font-size: 22rem;
+  height: 50rem;
+  border: none;
+  background-color: var(--light-blue);
+  left: 50%;
+  transform: translate(-50%);
+  width: 100%;
 }
 
 .correct {
@@ -325,13 +339,33 @@
   color: var(--light-blue);
 }
 
+.whatDetail {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  margin-bottom: 320rem;
+  padding: 10rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  background-color: white;
+  border: solid 3rem var(--light-blue);
+  border-radius: 10rem;
+  height: fit-content;
+  width: 100%;
+  font-size: 25rem;
+}
+
 .detailsName {
   color: black;
-  font-size: 24rem;
+  font-size: 30rem;
   font-weight: 600;
 }
 
-.detailstext {
+.detailsText {
+  font-size: 20rem;
   width: 65%;
   z-index: 2;
 }
@@ -364,7 +398,7 @@
   width: 100vw;
   height: 100vh;
   background: white;
-  opacity: 0.8;
+  opacity: 0.9;
   z-index: 10;
 }
 
